--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.4",
+    "@angular/cdk": "^11.2.3",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/material": "^11.2.3",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
@@ -45,6 +47,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.1.5"
   },
   "husky": {
