--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@ngrx/store": "^11.0.1",
+    "@ngrx/router-store": "^11.0.1",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "firebase": "^8.2.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
