--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,8 @@
         "outDir": "./out-tsc/app",
         "types": [],
         "noUnusedLocals": true,
-        "noUnusedParameters": true
+        "noUnusedParameters": true,
+        "strictPropertyInitialization": false
     },
     "files": [
         "src/main.ts",
