--- a/package.json
+++ b/package.json
@@ -1,67 +1,68 @@
 {
-  "name": "events-seven",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "format": "prettier --write src/**/*.{js,ts,jsx,tsx,html,scss}",
-    "e2e": "ng e2e",
-    "pre-commit": "npm run lint && lint-staged"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~11.2.4",
-    "@angular/cdk": "^11.2.3",
-    "@angular/common": "~11.2.4",
-    "@angular/compiler": "~11.2.4",
-    "@angular/core": "~11.2.4",
-    "@angular/fire": "^6.1.4",
-    "@angular/forms": "~11.2.4",
-    "@angular/material": "^11.2.3",
-    "@angular/platform-browser": "~11.2.4",
-    "@angular/platform-browser-dynamic": "~11.2.4",
-    "@angular/router": "~11.2.4",
-    "@ngrx/store": "^11.0.1",
-    "@ngrx/router-store": "^11.0.1",
-    "@ngrx/effects": "^11.0.1",
-    "@ngrx/store-devtools": "^11.0.1",
-    "firebase": "^8.2.10",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.3",
-    "@angular/cli": "~11.2.3",
-    "@angular/compiler-cli": "~11.2.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "husky": "^4.3.8",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "~4.1.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run pre-commit"
+    "name": "events-seven",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "build:prod": "ng build --prod --aot",
+        "test": "ng test",
+        "lint": "ng lint",
+        "format": "prettier --write src/**/*.{js,ts,jsx,tsx,html,scss}",
+        "e2e": "ng e2e",
+        "pre-commit": "npm run lint && lint-staged"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~11.2.4",
+        "@angular/cdk": "^11.2.3",
+        "@angular/common": "~11.2.4",
+        "@angular/compiler": "~11.2.4",
+        "@angular/core": "~11.2.4",
+        "@angular/fire": "^6.1.4",
+        "@angular/forms": "~11.2.4",
+        "@angular/material": "^11.2.3",
+        "@angular/platform-browser": "~11.2.4",
+        "@angular/platform-browser-dynamic": "~11.2.4",
+        "@angular/router": "~11.2.4",
+        "@ngrx/store": "^11.0.1",
+        "@ngrx/router-store": "^11.0.1",
+        "@ngrx/effects": "^11.0.1",
+        "@ngrx/store-devtools": "^11.0.1",
+        "firebase": "^8.2.10",
+        "rxjs": "~6.6.0",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.11.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1102.3",
+        "@angular/cli": "~11.2.3",
+        "@angular/compiler-cli": "~11.2.4",
+        "@types/jasmine": "~3.6.0",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "husky": "^4.3.8",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~6.1.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "lint-staged": "^10.5.4",
+        "prettier": "^2.2.1",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "~4.1.5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run pre-commit"
+        }
+    },
+    "lint-staged": {
+        "*.{js,ts,html,scss}": "prettier --write"
     }
-  },
-  "lint-staged": {
-    "*.{js,ts,html,scss}": "prettier --write"
-  }
 }
