--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
         "indexes": "firestore.indexes.json"
     },
     "hosting": {
-        "public": "app/assets",
+        "public": "dist/events-seven",
         "ignore": [
             "firebase.json",
             "**/.*",
